fix message box size on small screens

--- a/www/app.scss
+++ b/www/app.scss
@@ -16,15 +16,15 @@ section {
             position: fixed;
             bottom: 0;
             width: 100%;
+            display: flex;
 
             input {
                 border: 0;
                 padding: 10px;
-                width: 90%;
                 margin-right: .5%;
+                flex-grow: 1;
             }
             button {
-                width: 9%;
                 background: rgb(130, 224, 255);
                 border: none;
                 padding: 10px;
